<resources>
    <string name="app_name">Cognitive</string>
    <string name="detect">自测</string>
    <string name="health">打卡</string>
    <string name="consult">养生</string>
    <string name="personal">我的</string>
    <string name="continue_test">测一测自己的认知健康水平吧~</string>
    <string name="test_name">量表一</string>
    <string name="begin_test">GO!</string>
    <string name="test">测试类型</string>
    <string name="test_list_string">测试量表</string>
    <string name="history_list_string">历史记录</string>
    <string name="health_maintenance">养生指导</string>
    <string name="daily_health_info">每日养生资讯</string>
    <string name="info_from_maigan">来自麦秆整理的有效信息</string>
    <string name="diet">养生食谱</string>
    <string name="sport">运动知识</string>
    <string name="season_nurse">睡眠指导</string>
    <string name="habit">健康资讯</string>
    <string name="recommendation">为你推荐</string>
    <string name="search">搜索</string>
    <string name="search_hint">尝试搜索“秋季养生”</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--FRAIL page-->
    <string name="FRAIL_intro">\t\t\t\tFRAIL量表由国际营养与老年医学会下属的老年医学专家小组最先提出，他们认为，衰弱应当视为一种机能障碍前状态，衰弱的评估应当排除机能障碍等相关因素，即应当排除影响正常日常生活行为能力的生理功能障碍。FRAIL量表由疲劳感（fatigue）、抵抗力（resistance）、步行能力（ambulation）、疾病状况（illness）和体重减轻（lossofweight）五项内容组成，这五项内容的英文单词首字母构成了FRAIL量表的名称。</string>
    <string name="start_test">开始测试</string>
    <string name="back"><![CDATA[<<返回]]></string>
    <string name="frail_title">量表一\t\tFRAIL量表</string>
    <!--FRAIL questions-->
    <string name="FRAIL_1">在过去的四周内您经常感到疲劳吗？</string>
    <string name="FRAIL_2">您上10级楼梯有困难吗？</string>
    <string name="FRAIL_3">您在没有协助的情况下走200米至300米有困难吗？</string>
    <string name="FRAIL_4">医生是否告诉你患有以下疾病？(若无下列疾病，可直接进入下一题)</string>
    <string name="FRAIL_5">您最近1年内体重下降明显吗？</string>
    <string name="FRAIL_healthy">\t\t\t\t您现在处于健康状态，没有认知衰弱的迹象。</string>
    <string name="FRAIL_pre_frailty">\t\t\t\t您现在处于认知衰弱前期，建议有针对性地进行早期干预。</string>
    <string name="FRAIL_frailty">\t\t\t\t您现在处于认知衰弱，建议去医院进一步检查并进行治疗。\n\t\t\t\t对于造成不良结局的不可逆的认知衰弱患者，需进行综合老年评估的多模式干预，维持功能，提高生活质量。</string>
    <string name="AD8_intro">AD8量表是美国华盛顿大学与2005年开发的八题探访问卷，AD8量表是临床上使用的医学量表，用以极早期痴呆症的筛查。 它也可以供家属使用评估，作为疾病风险的评估。
        就临床而言，痴呆可能是源于阿尔茨海默病、血管性痴呆、路易体痴呆或额颞叶痴呆。</string>
    <string name="AD8_1">是否有判断力上的困难，例如落入圈套或骗局、财务上不好的决定、买了不合适的礼物？</string>
    <string name="AD8_2">之前感兴趣的事情，现在是否失去兴趣？</string>
    <string name="AD8_3">是否重复相同问题、故事和陈述？</string>
    <string name="AD8_4">是否在学习如何使用工具、设备和小器具上有困难？</string>
    <string name="AD8_5">是否忘记正确的年份或日期？</string>
    <string name="AD8_6">是否处理复杂的财物上有困难？</string>
    <string name="AD8_7">是否记住约会的时间有困难？</string>
    <string name="AD8_8">是否有持续的思考和记忆方面的问题？</string>
    <!--advice-->
    <string name="sport_advice_1">46~65岁衰老期人的体力和肌肉量开始下降，运动主要以对抗骨质疏松、肌肉松弛为主，要以安全、简便为原则。推荐健步走，以改善血液循环、降低体脂率;举哑铃等力量锻炼以增强或维持肌肉力量。65岁以后身体机能都处于低水平，此阶段主要以提高生活质量、预防跌倒、提升心肺功能为主。建议做轻柔的有氧运动，并配合适量的力量训练坚实肌肉、强化骨骼，并注意饮食的均衡，适当多补充优质蛋白质、钙质等营养素。</string>
    <string name="sport_advice_2">散步是一种十分有益的运动方式，可以一边游览身边的美景，一边锻炼身体。每天在街头巷尾、公园湖畔走走看看，能够放空身心，消除身体疲劳，还可以促进身体血液循环和肠胃消化。散步应当自然而为，不要流于形式，应当量力而行，切勿过度劳累。</string>
    <string name="sport_advice_3">慢跑不仅可以改善心肺功能、提高身体代谢能力和机体免疫力，还能降低血脂，延缓衰老等。春季气候宜人，正是进行慢跑的最佳季节，但要注意在跑前做好准备活动，适量而行，跑步最好在上午10点以后，或下午进行慢跑。</string>
    <string name="sport_advice_4">登山是一项极佳的有氧运动，山中的空气异常新鲜，对于改善肺通气量、增加肺活量、提高肺的功能很有益处，同时还能增强心脏的收缩能力。另外，在山巅之上极目远眺，可以解除眼部肌肉的疲劳，还可使紧张的大脑得到放松和休息。</string>

    <string name="diet_advice_1">健康膳食可以帮助人们预防所有的营养失衡性疾病，以及非传染性疾病（NCDs）如肥胖、糖尿病、心脏病、中风以及癌症。能量摄入量应该与能量消耗相平衡。证据表明，为了避免不健康的体重增长，总脂肪不应该超过能量总摄入量的30%，脂肪的消费应从饱和脂肪向不饱和脂肪转变，消除工业反式脂肪。限制游离糖的摄入量，应低于总能量的10%。作为健康膳食的一部分，减少到总能量的5%将具有更多的健康效益。保持食盐摄入量低于5克/天可帮助成年人群预防高血压，降低心脏病和中风的风险。</string>
    <string name="diet_advice_2">吃多种食物，包括水果和蔬菜，注意选择深绿色蔬菜和红色蔬菜；每天中等大小水果1~2个。少吃盐，不另外食用咸菜、黄酱、豆腐乳、芝麻酱等食物。吃适量的脂肪和油，使用健康的油（例如芝麻和花生油）煮食，限制牛油、椰子油、猪油和榈油，避免反式脂肪酸。</string>
    <string name="diet_advice_3">限制糖摄入量，适量主食：每日5~8两，米面为主，每日粗杂粮占主食的1/3。保持水分，喝足够的水，不要和含糖的饮料。避免吃得过饱，晚餐应注意避免摄入过于油腻和不宜消化的食物。提倡进餐半小时后散步30~60分钟。</string>

    <string name="memory_advice_1">训练记忆力被称为脑细胞的“体操运动”。经常做这种“体操”，可以防止脑的老化，是健脑的良方。</string>
    <string name="memory_advice_2">对于老年性痴呆患者进行记忆力训练，应该关注训练的过程，而不是训练的结果。即并不一定要让病人记住多少东西，而在于让病人参加了训练，动了脑筋。</string>

    <!--Fragment2-->
    <string name="use_days">健康打卡第123天</string>
    <string name="today_steps">今天走了12345步</string>
    <string name="today_distance">相当于走了8公里</string>
    <string name="consume_calorie">消耗了235大卡</string>
    <string name="click_history_steps">查看我的历史步数>></string>
    <string name="unfold">展开图片</string>

</resources>