<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@null"
        android:id="@+id/back_button"
        android:onClick="startActivityForResult"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/miku" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:background="@color/content_background"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/AD8_intro"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:text="@string/start_test"
            android:textColor="@color/black"
            android:background="@drawable/white_with_stroke"
            android:onClick="startAD8Test"
            />
    </LinearLayout>
</LinearLayout>
