<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_body">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/health_maintenance"
            android:textSize="30sp"
            android:textStyle="bold" />
    </android.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/white">

        <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/goDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/daily_health_info"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/info_from_maigan" />

                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/TableLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TableRow android:layout_height="70dp">

                        <ImageView
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="15dp"
                            android:id="@+id/habits"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/health" />

                        <ImageView
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="15dp"
                            android:id="@+id/diet"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/diet" />

                        <ImageView
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="15dp"
                            android:id="@+id/exercise"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/excercise" />

                        <ImageView
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:paddingTop="15dp"
                            android:id="@+id/solarTerms"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/sleephelp" />

                    </TableRow>

                    <TableRow android:layout_height="30dp">

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/habit" />

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/diet" />

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/sport" />

                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/season_nurse" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="为你推荐"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/suggest1"
                    card_view:cardCornerRadius="25dp">

                    <ImageView
                        android:id="@+id/info_text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/suggest1" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/suggest1"
                    card_view:cardCornerRadius="25dp">

                    <ImageView
                        android:id="@+id/info_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/suggest2" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
